--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,11 @@ section {
 }
 body {
   line-height: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
 }
 ol,
 ul {
